tests/baselines/reference/recursiveNamedLambdaCall.errors.txt
recursiveNamedLambdaCall.ts(3,8): error TS2304: Cannot find name 'top'.
recursiveNamedLambdaCall.ts(3,15): error TS2304: Cannot find name 'top'.
recursiveNamedLambdaCall.ts(8,7): error TS2304: Cannot find name 'top'.
recursiveNamedLambdaCall.ts(10,14): error TS2304: Cannot find name 'setTimeout'.
recursiveNamedLambdaCall.ts(14,6): error TS2304: Cannot find name 'detach'.


==== recursiveNamedLambdaCall.ts (5 errors) ====
    var promise = function( obj ) {
    	
    		if ( top && top.doScroll ) {
    		     ~~~
!!! error TS2304: Cannot find name 'top'.
    		            ~~~
!!! error TS2304: Cannot find name 'top'.
    			(function doScrollCheck() {
    				if ( false ) {
    
    					try {
    						top.doScroll("left");
    						~~~
!!! error TS2304: Cannot find name 'top'.
    					} catch(e) {
    						return setTimeout( doScrollCheck, 50 );
    						       ~~~~~~~~~~
!!! error TS2304: Cannot find name 'setTimeout'.
    					}
    
    					// detach all dom ready events
    					detach();
    					~~~~~~
!!! error TS2304: Cannot find name 'detach'.
    
    				}
    			})();
    		}
    };